# zcash-forum-digest

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  Modelfile  README.md  flake.nix
.github/workflows/: ci.yml  digest.yml
migrations/: 20250828050533_init.sql  20250828150603_topic_summaries_llm.sql  20250828151237_summary_watermark.sql  20250830163000_recent_summary.sql
public/: style.css
src/: lib.rs  llm.rs  main.rs  ollama.rs
tests/: chunk_chars.rs  db_guard.rs  db_text_prep.rs  link_builder.rs  merge_metadata.rs  ollama.rs  strip_post_tags.rs
tests/fixtures/: post.json
