[package]
name = "zc-forum-etl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "time"] }
time = { version = "0.3", features = ["serde", "parsing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1"
once_cell = "1.21.3"
backoff = { version = "0.4", features = ["tokio"] }
sha2 = "0.10"
tiktoken-rs = "0.7"
futures = "0.3"

[dev-dependencies]
wiremock = "0.6.5"
